DFHack future

  Internals:
    - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).
    - Lua API for listing files in directory. Needed for mod-manager.
    - support for multiple raw/init.d/*.lua init scripts in one save.

  New scripts:
    - gui/mod-manager: allows installing/uninstalling mods into df from df/mods directory.
    - gui/clone-uniform: duplicates the currently selected uniform in the military screen.

  New commands:
    - move the 'grow', 'extirpate' and 'immolate' commands as 'plant' subcommands
    - 'plant create' - spawn a new shrub under the cursor
    - command-prompt: a dfhack command prompt in df.

  Misc improvements:
    - digfort: improved csv parsing, add start() comment handling
    - exterminate: allow specifying a caste (exterminate gob:male)
    - siege-engine: engine quality and distance to target now affect accuracy.
    - createitem: in adventure mode it now defaults to the controlled unit as maker.

DFHack v0.34.11-r4

  New commands:
    - diggingInvaders - allows invaders to dig and/or deconstruct walls and buildings in order to get at your dwarves.
    - digFlood - automatically dig out specified veins as they are revealed
    - enable, disable - Built-in commands that can be used to enable/disable many plugins.
    - restrictice - Restrict traffic on squares above visible ice.
    - restrictliquid - Restrict traffic on every visible square with liquid.
    - treefarm - automatically chop trees and dig obsidian
  New scripts:
    - autobutcher: A GUI front-end for the autobutcher plugin.
    - invasionNow: trigger an invasion, or many
    - locate_ore: scan the map for unmined ore veins
    - masspit: designate caged creatures in a zone for pitting
    - multicmd: run a sequence of dfhack commands, separated by ';'
    - startdwarf: change the number of dwarves for a new embark
    - digmat: dig veins/layers tile by tile, as discovered
  Misc improvements:
    - autoSyndrome: