@@ -3,6 +3,7 @@ DFHack future
   Internals:
     - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).
     - Lua API for listing files in directory. Needed for mod-manager.
+    - Lua API for creating unit combat reports and writing to gamelog.
     - support for multiple raw/init.d/*.lua init scripts in one save.
 
   New scripts:
@@ -17,7 +18,8 @@ DFHack future
   Misc improvements:
     - digfort: improved csv parsing, add start() comment handling
     - exterminate: allow specifying a caste (exterminate gob:male)
-    - siege-engine: engine quality and distance to target now affect accuracy.
+    - siege-engine: engine quality and distance to target now affect accuracy;
+      firing the siege engine produces a combat report.
     - createitem: in adventure mode it now defaults to the controlled unit as maker.
 
 DFHack v0.34.11-r4
